--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,13 +6,15 @@
 
   <div class="collapse navbar-collapse justify-content-end text-right" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li routerLinkActive="nav-item active">
+        <a class="nav-link" routerLink="/home">Home </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+      <li routerLinkActive="nav-item active">
+        <a class="nav-link" routerLink="/course-form">Course Form</a>
       </li>
-      
+      <li routerLinkActive="nav-item active">
+        <a class="nav-link" routerLink="/contact-form">Contact Form</a>
+      </li>
     </ul>
     
   </div>
