--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   </button>
 
   <div class="collapse navbar-collapse justify-content-end text-right" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav">
       <li routerLinkActive="nav-item active">
         <a class="nav-link" routerLink="/home">Home </a>
       </li>
